--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VE5ZH9W8BP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VE5ZH9W8BP');
+</script>
+	
 <head>
 <title>E-Commerce Website</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+	
+	
+	
 </head>
 <body>
 
