--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VE5ZH9W8BP"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6PFHRTEFQS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-VE5ZH9W8BP');
+  gtag('config', 'G-6PFHRTEFQS');
 </script>
 	
 <head>
