--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	   <li><a href="#!">Home</a></li>
 	   <li><a href="#">Men Shoes &nbsp;<i class="fa fa-caret-down"></i></a>
 			<ul>
-				<li><a href="#!">&nbsp; Barnd Name</a></li>
-				<li><a href="#!"> Barnd Name</a></li>
-                <li><a href="#!"> Barnd Name</a></li>
-                <li><a href="#!"> Barnd Name</a></li>
+				<li><a href="#!"> Bata</a></li>
+				<li><a href="#!"> woodland</a></li>
+                <li><a href="#!"> red chief</a></li>
+                <li><a href="#!"> allen colly</a></li>
 			</ul>
 		</li>
         <li><a href="#">Women Shoes &nbsp;<i class="fa fa-caret-down"></i></a>
 			<ul>
-				<li><a href="#!">&nbsp; Barnd Name</a></li>
-				<li><a href="#!"> Barnd Name</a></li>
-                <li><a href="#!"> Barnd Name</a></li>
-                <li><a href="#!"> Barnd Name</a></li>
+				<li><a href="#!">&nbsp; Barnd 1</a></li>
+				<li><a href="#!"> Barnd 2</a></li>
+                <li><a href="#!"> Barnd 3</a></li>
+                <li><a href="#!"> Barnd 4</a></li>
 			</ul>
 		</li>
 		<li><a href="#">Kids Shoes &nbsp;<i class="fa fa-caret-down"></i></a>
