--- a/index.html
+++ b/index.html
@@ -200,22 +200,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div align="center">
             <div class="content-right-product">
                 <div><img src="images/1.jpg" width="270" height="200"></div>
-                <div class="content-right-product-h4">Lorem Ipsum</div>
-                <div class="content-right-product-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+                <div class="content-right-product-h4">product 1</div>
+                <div class="content-right-product-p">Comfy and stylish.</div>
                 <div class="content-right-product-amount"><i class="fa fa-inr" style="color:#df001a;"></i> 1500.00</div>
                 <div class="cart" align="center"><a href="" class="btn">Add to Cart</a></div>
             </div>
             <div class="content-right-product">
             	<div><img src="images/2.jpg" width="270" height="200"></div>
-                 <div class="content-right-product-h4">Lorem Ipsum</div>
-                <div class="content-right-product-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+                 <div class="content-right-product-h4">product 2</div>
+                <div class="content-right-product-p">sleak and classy.</div>
                 <div class="content-right-product-amount"><i class="fa fa-inr" style="color:#df001a;"></i> 2159.00</div>
                 <div class="cart" align="center"><a href="" class="btn">Add to Cart</a></div>
             </div>
             <div class="content-right-product">
             	<div><img src="images/3.jpg" width="270" height="200"></div>
-                 <div class="content-right-product-h4">Lorem Ipsum</div>
-                <div class="content-right-product-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
+                 <div class="content-right-product-h4">product 3</div>
+                <div class="content-right-product-p">comfy and durable.</div>
                 <div class="content-right-product-amount"><i class="fa fa-inr" style="color:#df001a;"></i> 4999.00</div>
                 <div class="cart" align="center"><a href="" class="btn">Add to Cart</a></div>
             </div>
@@ -223,7 +223,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div align="center">
             <div class="content-right-product">
                 <div><img src="images/4.jpg" width="270" height="200"></div>
-                <div class="content-right-product-h4">Lorem Ipsum</div>
+                <div class="content-right-product-h4">product 4/div>
                 <div class="content-right-product-p">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
                 <div class="content-right-product-amount"><i class="fa fa-inr" style="color:#df001a;"></i> 2599.00</div>
                 <div class="cart" align="center"><a href="" class="btn">Add to Cart</a></div>
