--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   gtag('config', 'G-6PFHRTEFQS');
 </script>
 	
+	
+<head>
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KNH2N6X');</script>
+})(window,document,'script','dataLayer','GTM-544WH7L');</script>
 <!-- End Google Tag Manager -->
 	
-<head>
 	
 <title>E-Commerce Website</title>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -27,9 +28,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	
 </head>
 <body>
-	
 	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNH2N6X"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-544WH7L"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 	
