--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6PFHRTEFQS"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9YTMMZX2C"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6PFHRTEFQS');
+  gtag('config', 'G-Z9YTMMZX2C');
 </script>
 	
 	
 <head>
+	
+	
 	<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
