--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z9YTMMZX2C"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11VR8RBMJV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Z9YTMMZX2C');
+  gtag('config', 'G-11VR8RBMJV');
 </script>
 		
 <head>
