--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         	<div class="header-right-bottom-left">
         		<a href="#"><input type="text" class="form" placeholder="Search Product"><img src="images/search.png" /></a>
             </div>
+		 
             <div class="header-right-bottom-center">
                 <ul>
                     <li><a href="#!">Sign In</a></li>
@@ -124,9 +125,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <!----- Start Slider (or) Banner ------>
+	<!----><button type="button">Click Me!</button>
 <div class="slider">
    <div class="slider-padding">
-        <div style="padding-top:30px;"><a href="#" class="btn">Click Here!</a></div>
+        <div style="padding-top:30px;"><a href="#" class="btn" id="btn1">Click Here!</a></div>
    </div>
 </div>
 <!----- End Slider (or) Banner ------>
